--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -131,19 +131,9 @@ jobs:
         pip install -r requirements.txt
         python -m pip install -e .
     - name: Run Tests
-      if: ${{ matrix.os != 'macos-latest' }}
       run: | 
         coverage erase
-        coverage run --context=${{ matrix.os }}.py${{ matrix.python-version }} --source=wntr --omit="*/tests/*","*/sim/network_isolation/network_isolation.py","*/sim/aml/evaluator.py" -m pytest  --doctest-modules --doctest-glob="*.rst" wntr
-        coverage run --context=${{ matrix.os }}.py${{ matrix.python-version }} --source=wntr --omit="*/tests/*","*/sim/network_isolation/network_isolation.py","*/sim/aml/evaluator.py" --append -m pytest --doctest-glob="*.rst" documentation
-      env:
-        COVERAGE_FILE: .coverage.${{ matrix.python-version }}.${{ matrix.os }}
-    - name: Run Tests (ARM-processor)
-      if: ${{ matrix.os == 'macos-latest'}}
-      # doctests are not flexible enough to skip EPANET=v2.0 errors on ARM processor, so do not run doctests on ARM system
-      run: | 
-        coverage erase
-        coverage run --context=${{ matrix.os }}.py${{ matrix.python-version }} --source=wntr --omit="*/tests/*","*/sim/network_isolation/network_isolation.py","*/sim/aml/evaluator.py" -m pytest  --doctest-modules --doctest-glob="*.rst" wntr
+        coverage run --context=${{ matrix.os }}.py${{ matrix.python-version }} --source=wntr --omit="*/tests/*","*/sim/network_isolation/network_isolation.py","*/sim/aml/evaluator.py" -m pytest wntr
       env:
         COVERAGE_FILE: .coverage.${{ matrix.python-version }}.${{ matrix.os }}
     - name: Save coverage
@@ -171,9 +161,9 @@ jobs:
     - name: Download coverage artifacts from test matrix
       uses: actions/download-artifact@v4
       with:
-        pattern: .coverage.*.ubuntu-latest # coverage from other OS cause problems
+        pattern: .coverage.*.*
     - name: Setup coverage and combine reports
-      run: coverage combine .coverage.*.ubuntu-latest
+      run: coverage combine .coverage.*.*
     - name: Create coverage report
       run: |
         echo "[paths]" > .coveragerc
