--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -278,7 +278,7 @@ jobs:
           path: dist
       - name: Validate distributions
         run: |
-          python -m pip install --upgrade twine
+          python -m pip install --upgrade --force-reinstall build setuptools>=69 wheel twine pkginfo importlib_metadata
           twine check dist/*
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@0ab0b79471669eb3a4d647e625009c62f9f3b241 # release/v1
